--- a/.gitignore
+++ b/.gitignore
@@ -36,4 +36,10 @@ Thumbs.db
 /tmp/
 .tmp/
 *.tmp
-*.bak 
+*.bak
+
+# Nginx configuration
+nginx/php-app.conf
+
+# Environment variables
+.env.production 
